--- a/public/admin/assets/views/customer-analytics.html
+++ b/public/admin/assets/views/customer-analytics.html
@@ -47,28 +47,7 @@
             </div>
         </div>
     </div>
-    <div class="clearfix"></div>
-    <style>
-        .page-events>li{
-            position: relative;
-        }
-        .page-events>li:after {
-            content: "";
-            display: block;
-            position: absolute;
-            top: 0;
-            left: -5px;
-            width: 10px;
-            height: 10px;
-            border-radius: 6px;
-            background:#47b2d1;
-            border: 1px solid #47b2d1;
-        }
-        .page-events>li:last-child:after { 
-            background:#04e261;
-            border: 1px solid #04e261;
-        }
-    </style>
+    <div class="clearfix"></div> 
     <div class="row">
         <div class="col-sm-12">
             <div class="panel panel-white margin-top-15 dashboard-live-widget-container analytics-live-widget-container" id="liveTrafficData" ng-class="{'load1 csspinner': !livePlatformTrafficConfig.options}">
@@ -78,67 +57,75 @@
                 <div class="panel-body" style="position: relative" >
                     <div class="live-visitor-details" ng-if="liveVisitorDetails.length">
                             <!-- Live visitor details- -->
-                        <div class="col-sm-7 visitor-left-pane">
+                        <div class="col-sm-6 visitor-left-pane">
                             <ul class="active-ul">
                                 <li ng-class="{'active-visitor-detail': selectedVisitorIndex === $index}" ng-repeat="visitorDetail in liveVisitorDetails track by $index"  ng-click ="setActiveVisitorIndex($index)" class="cursor-pointer main-li">
                                     <div class="col-xs-6 visitor-address">{{visitorDetail.email||visitorDetail.fingerprint}}</div>
-                                    <div class="col-xs-3 ">{{visitorDetail.subdomain}}</div>
-                                    <div class="col-xs-3 visitor-timestamp">{{convertUtcToLocal(visitorDetail.server_time)}}</div>
+                                    <div class="col-xs-2 ">{{visitorDetail.subdomain}}</div>
+                                    <div class="col-xs-4 visitor-timestamp">{{convertUtcToLocal(visitorDetail.server_time)}}</div>
                                 </li>
                             </ul>
                         </div>
-                        <div class="col-sm-5 visitor-right-pane">
-                                <div class="col-xs-12"> 
-                                    <p><strong>Name: </strong> {{activeVisitorDetail.name}} </p>
-                                    <p><strong>Email: </strong> {{activeVisitorDetail.email}} </p>
-                                    <p><strong>Email: </strong> {{activeVisitorDetail.fingerprint}} </p>
-                                    
-                                </div>
-                            <ul class="adv-info"> 
+                        <div class="col-sm-6 visitor-right-pane"> 
+                            <div class="col-xs-2"><img  src="/admin/assets/images/default-user.png" style="width: 39px;
+                                height: 40px;border-radius: 60%;" class="ng-isolate-scope" ></div>
+                            <div class="col-xs-10"> 
+                                <p><strong>Name: </strong> {{activeVisitorDetail.name}} </p>
+                                <p><strong>Email: </strong> {{activeVisitorDetail.email}} </p>
+                                <p><strong>ID: </strong> {{activeVisitorDetail.fingerprint}} </p>  
+                            </div> 
+                            <ul class="adv-info">  
                                 <li>
-                                    <div class="col-xs-6"><strong>IP Address</strong></div>
-                                    <div class="col-xs-6">{{activeVisitorDetail.ip_address}}</div>
+                                    <div class="col-xs-5"><strong>IP Address</strong></div>
+                                    <div class="col-xs-7">{{activeVisitorDetail.ip_address}}</div>
                                 </li>
                                 <li >
-                                    <div class="col-xs-6"><strong>Continent</strong></div>
-                                    <div class="col-xs-6">{{activeVisitorDetail.maxmind.continent}}</div>
+                                    <div class="col-xs-5"><strong>Continent</strong></div>
+                                    <div class="col-xs-7">{{activeVisitorDetail.maxmind.continent}}</div>
                                 </li>
                                 <li >
-                                    <div class="col-xs-6"><strong>Country</strong></div>
-                                    <div class="col-xs-6">{{activeVisitorDetail.maxmind.country}}</div>
+                                    <div class="col-xs-5"><strong>Country</strong></div>
+                                    <div class="col-xs-7">{{activeVisitorDetail.maxmind.country}}</div>
                                 </li>
                                 <li >
-                                    <div class="col-xs-6"><strong>State</strong></div>
-                                    <div class="col-xs-6">{{activeVisitorDetail.maxmind.province}}</div>
+                                    <div class="col-xs-5"><strong>State</strong></div>
+                                    <div class="col-xs-7">{{activeVisitorDetail.maxmind.province}}</div>
                                 </li>
                                 <li >
-                                    <div class="col-xs-6"><strong>City</strong></div>
-                                    <div class="col-xs-6">{{activeVisitorDetail.maxmind.city}}</div>
+                                    <div class="col-xs-5"><strong>City</strong></div>
+                                    <div class="col-xs-7">{{activeVisitorDetail.maxmind.city}}</div>
                                 </li>
                                 <li >
-                                    <div class="col-xs-6"><strong>Postal Code</strong></div>
-                                    <div class="col-xs-6">{{activeVisitorDetail.maxmind.postal_code}}</div>
-                                </li>
-                                <li>
-                                    <div class="col-xs-6"><strong>Browser</strong></div>
-                                    <div class="col-xs-6">{{activeVisitorDetail.user_agent.browser.name}} {{activeVisitorDetail.user_agent.browser.version}}</div>
+                                    <div class="col-xs-5"><strong>Postal Code</strong></div>
+                                    <div class="col-xs-7">{{activeVisitorDetail.maxmind.postal_code}}</div>
                                 </li>
                                 <li>
-                                    <div class="col-xs-6"><strong>OS Details</strong></div>
-                                    <div class="col-xs-6">{{activeVisitorDetail.user_agent.os.name}} {{activeVisitorDetail.user_agent.os.version}}</div>
+                                    <div class="col-xs-5"><strong>Browser</strong></div>
+                                    <div class="col-xs-7">{{activeVisitorDetail.user_agent.browser.name}} {{activeVisitorDetail.user_agent.browser.version}}</div>
+                                </li>
+                                <li>
+                                    <div class="col-xs-5"><strong>OS Details</strong></div>
+                                    <div class="col-xs-7">{{activeVisitorDetail.user_agent.os.name}} {{activeVisitorDetail.user_agent.os.version}}</div>
                                 </li>
                             </ul>
                             <hr>
-                            <ul class="page-events">
+                            <div class="col-xs-4" style="font-size:16px;font-weight:bold;">
+                                    {{activeVisitorDetail.resultInMinutes}}<br>
+                                    {{activeVisitorDetail.pageEvents.length}} Page events
+                            </div>
+                            <ul class="page-events col-xs-8">
                                 <li ng-repeat="pageEvent in activeVisitorDetail.pageEvents">
                                     <div ng-switch on="pageEvent.activityType">
                                         <div ng-switch-when="CONTACT_FORM">
                                             <p>
-                                                <span class="label label-default">CONTACT FORM</span> was submitted with the data:
-                                                <ul class="form-values">
-                                                    <li ng-repeat="(k,v) in pageEvent.extraFields">
-                                                        <b>{{k | formatText}}</b>: {{v}}
-                                                    </li>
+                                                <span style="padding-left:10px;">{{pageEvent.pageTime | date:'h:mm a'}}</span>
+                                                    <ul class="form-values"> 
+                                                        <li >
+                                                            <strong style="overflow: hidden;display:inline-block;">Submitted :</strong><span style="width:80%;" >Form was submitted with the data</span>
+                                                        </li>      
+                                                        <li ng-repeat="(k,v) in pageEvent.extraFields">
+                                                            <b>{{k | formatText}}</b>: {{v}}
+                                                        </li>
                                                 </ul>
                                             </p> 
                                         </div>
@@ -147,7 +134,7 @@
                                                 <span style="padding-left:10px;">{{pageEvent.pageTime | date:'h:mm a'}}</span>
                                                 <ul class="form-values">
                                                     <li >
-                                                        <strong style="overflow: hidden;display:inline-block;">Visted:</strong><span style="width:90%;" class="text-adjust inline-block" tooltip-placement="top" tooltip="{{pageEvent.pageRequested}}">{{pageEvent.pageRequested}}</span>
+                                                        <strong style="overflow: hidden;display:inline-block;">Visted:</strong><span style="width:80%;" class="text-adjust inline-block" tooltip-placement="top" tooltip="{{pageEvent.pageRequested}}">{{pageEvent.pageRequested}}</span>
                                                     </li>
                                                 </ul>
                                             </p> 
