--- a/public/less/sections/customers.less
+++ b/public/less/sections/customers.less
@@ -122,11 +122,14 @@
     } 
     .visitor-right-pane{
       padding-top: 10px;
-      line-height: 1.6em; 
-      .adv-info>li div{
-        padding-right: 0px;
-        padding-left: 5px; 
-      } 
+      line-height: 1.6em;  
+      .adv-info{
+        font-size: 12px;
+          &>li div{
+            padding-right: 0px;
+            padding-left: 5px; 
+          }
+        }
       ul{
         list-style: none;
         margin: 0;
@@ -151,12 +154,27 @@
             width:100%;
             padding-left: 10px;
         }
-        &>li{
-            border-left:1px solid #47b2d1 ;
-            &:last-child{
-                border-left:1px solid #04e261; 
+        &>li{ 
+            border-left: 1px solid #47b2d1;
+            position: relative;
+            &:after {
+                content: "";
+                display: block;
+                position: absolute;
+                top: 0;
+                left: -5px;
+                width: 10px;
+                height: 10px;
+                border-radius: 6px;
+                background:#47b2d1; 
             }
-        }
+            &:last-child{
+                border-left:none; 
+                &:after { 
+                    background:#04e261; 
+                }
+            }
+        } 
       }
       .page-event-tooltip .tooltip-inner{
         word-wrap: break-word;
