--- a/public/less/sections/customers.less
+++ b/public/less/sections/customers.less
@@ -119,15 +119,15 @@
           background-color: #efefef;
         }
       }
-    } 
+    }
     .visitor-right-pane{
       padding-top: 10px;
-      line-height: 1.6em;  
+      line-height: 1.6em;
       .adv-info{
         font-size: 12px;
           &>li div{
             padding-right: 0px;
-            padding-left: 5px; 
+            padding-left: 5px;
           }
         }
       ul{
@@ -145,7 +145,7 @@
             }
         }
     }
-    ul.page-events{ 
+    ul.page-events{
         padding: 5px;
         max-height: 200px;
         overflow-y: scroll;
@@ -154,7 +154,7 @@
             width:100%;
             padding-left: 10px;
         }
-        &>li{ 
+        &>li{
             border-left: 1px solid #47b2d1;
             position: relative;
             &:after {
@@ -166,15 +166,15 @@
                 width: 10px;
                 height: 10px;
                 border-radius: 6px;
-                background:#47b2d1; 
+                background:#47b2d1;
             }
             &:last-child{
-                border-left:none; 
-                &:after { 
-                    background:#04e261; 
+                border-left:none;
+                &:after {
+                    background:#04e261;
                 }
             }
-        } 
+        }
       }
       .page-event-tooltip .tooltip-inner{
         word-wrap: break-word;
@@ -183,6 +183,10 @@
     }
     .visitor-address{
       font-weight: bold;
+      padding-top: 10px;
+      padding-bottom: 10px;
+    }
+    .visitor-account{
       padding-top: 10px;
       padding-bottom: 10px;
     }
