use cname for cdn

--- a/templates/snippets/index_head_styles_cdn.jade
+++ b/templates/snippets/index_head_styles_cdn.jade
@@ -13,10 +13,10 @@
 //- link(rel="stylesheet", href='../js/libs/froala-wysiwyg-editor/css/froala_style.min.css')
 
 //- <!-- Vendor Styles -->
-link(rel='stylesheet', href='http://d2cwrhu7f3xluz.cloudfront.net/css/vendor.css')
+link(rel='stylesheet', href='http://cdn-js.test.indigenous.io/css/vendor.css')
 
 //- <!-- Frontend Styles -->
-link(rel='stylesheet', href='http://d2cwrhu7f3xluz.cloudfront.net/css/styles.css')
+link(rel='stylesheet', href='http://cdn-js.test.indigenous.io/css/styles.css')
 
 style(type="text/css").
 
