#9797 remove vendor from CDN because fonts

--- a/templates/snippets/index_head_styles_cdn.jade
+++ b/templates/snippets/index_head_styles_cdn.jade
@@ -13,7 +13,7 @@
 //- link(rel="stylesheet", href='../js/libs/froala-wysiwyg-editor/css/froala_style.min.css')
 
 //- <!-- Vendor Styles -->
-link(rel='stylesheet', href='http://cdn-js.test.indigenous.io/css/vendor.css')
+link(rel='stylesheet', href='/css/vendor.css')
 
 //- <!-- Frontend Styles -->
 link(rel='stylesheet', href='http://cdn-js.test.indigenous.io/css/styles.css')
