--- a/public/admin/assets/js/ssb-site-builder/ssb-components/ssb-page-section/ssb-page-section-template.component.html
+++ b/public/admin/assets/js/ssb-site-builder/ssb-components/ssb-page-section/ssb-page-section-template.component.html
@@ -2,8 +2,8 @@
     <section
         ng-show="vm.displaySection"
         id="section_{{vm.section._id}}"
-        class="ssb-check-fixed ssb-section-layout ssb-section-section ssb-section-type-{{vm.section.components[0].type}} {{vm.preSectionClass}}"
-        style="{{vm.preSectionStyle}}"
+        class="ssb-check-fixed ssb-section-layout ssb-section-section ssb-section-type-{{vm.section.components[0].type}} {{vm.section.sectionClass}}"
+        style="{{vm.section.sectionStyle}}"
         ng-attr-style="{{vm.sectionStyle(vm.section)}}">
         <style>
         #section_{{vm.section._id}} > .bg-overlay {
@@ -17,14 +17,14 @@
 
         <div
         ng-if="vm.section.bg && !(vm.section.bg.img.show && vm.section.bg.img && vm.section.bg.img.parallax)"
-        class="bg {{vm.sectionBGClass}}"
-        ng-attr-style="{{vm.sectionBGStyle}}">
+        class="bg {{vm.section.sectionBGClass}}"
+        ng-attr-style="{{vm.section.sectionBGStyle}}">
         </div>
 
         <div id="px-ele-{{vm.section._id}}"
         ng-if="vm.section.bg.img && vm.section.bg.img.url && vm.section.bg.img.show && vm.section.bg.img.parallax"
         {{vm.section.bg.img.parallax ? parallax-background : ""}}
-        class="bg {{vm.sectionBGClass}} opacity-0"
+        class="bg {{vm.section.sectionBGClass}} opacity-0"
         ng-attr-parallax-ratio="{{vm.section.bg.img.parallax ? '0.4' : '1'}}"
         ng-attr-style='
         background: url("{{vm.section.bg.img.url}}") repeat-y;
@@ -33,7 +33,7 @@
 
         <div
         ng-show="vm.section.bg.video.show && vm.section.bg.video.urlProcessed"
-        class="bg bg-video {{vm.sectionBGClass}}">
+        class="bg bg-video {{vm.section.sectionBGClass}}">
             <div id="section_video_{{vm.section._id}}"></div>
         </div>
 
