Front end - Section styles should either load once OR on resize

--- a/public/admin/assets/js/ssb-site-builder/ssb-components/ssb-page-section/ssb-page-section-template.component.html
+++ b/public/admin/assets/js/ssb-site-builder/ssb-components/ssb-page-section/ssb-page-section-template.component.html
@@ -4,7 +4,7 @@
         id="section_{{vm.section._id}}"
         class="ssb-check-fixed ssb-section-layout ssb-section-section ssb-section-type-{{vm.section.components[0].type}} {{vm.section.sectionClass}}"
         style="{{vm.section.sectionStyle}}"
-        ng-attr-style="{{vm.sectionStyle(vm.section)}}">
+        ng-attr-style="{{vm.sectionStyle}}">
         <style>
         #section_{{vm.section._id}} > .bg-overlay {
         background: {{vm.section.bg.img.overlaycolor || 'transparent'}}!important;
