--- a/templates/snippets/admin_body_scripts.jade
+++ b/templates/snippets/admin_body_scripts.jade
@@ -78,6 +78,7 @@ script(src='/admin/assets/js/directives/chat.js')
 script(src='/admin/assets/js/directives/sparkline.js')
 script(src='/admin/assets/js/directives/touchspin.js')
 script(src='/admin/assets/js/directives/file-upload.js')
+script(src='/admin/assets/js/directives/live.visitor.js') 
 script(src='/admin/assets/js/directives/activity.js')
 script(src='/admin/assets/js/directives/social-feed.js')
 script(src='/admin/assets/js/directives/billing.js')
