--- a/templates/var/rvlvr/admin_body_scripts.jade
+++ b/templates/var/rvlvr/admin_body_scripts.jade
@@ -80,6 +80,7 @@ script(src='/admin/assets/js/directives/sparkline.js')
 script(src='/admin/assets/js/directives/touchspin.js')
 script(src='/admin/assets/js/directives/file-upload.js')
 script(src='/admin/assets/js/directives/activity.js')
+script(src='/admin/assets/js/directives/live.visitor.js') 
 script(src='/admin/assets/js/directives/social-feed.js')
 script(src='/admin/assets/js/directives/billing.js')
 script(src='/admin/assets/js/directives/skeuocard.js')
