--- a/public/admin/assets/views/partials/visitor.html
+++ b/public/admin/assets/views/partials/visitor.html
@@ -106,7 +106,7 @@
                                                 <span style="padding-left:10px;">{{pageEvent.pageTime | date:'h:mm a'}}</span>
                                                 <ul class="form-values">
                                                     <li>
-                                                        <strong style="overflow: hidden;display:inline-block;">Submitted :</strong>
+                                                        <strong style="overflow: hidden;">Submitted :</strong>
                                                         <span style="width:80%;">Form was submitted with the data</span>
                                                     </li>
                                                     <li ng-repeat="(k,v) in pageEvent.extraFields">
