#10469 - Tune/restore background-color of live visitor widget/dashboard

--- a/public/less/dashboard/dashboard.less
+++ b/public/less/dashboard/dashboard.less
@@ -482,10 +482,18 @@
     }
 
     .panel-body {
+        background-color: #ffffff;
         cursor: initial;
         position: absolute;
         width: 100%;
         height: auto;
+    }
+
+    .panel-heading {
+        background-color: #ffffff!important;
+    }
+    .panel-footer {
+        display: none;
     }
 
     @media screen and (min-width: 768px) {
