--- a/public/admin/assets/views/partials/visitor.html
+++ b/public/admin/assets/views/partials/visitor.html
@@ -31,9 +31,8 @@
                     </div>
                     <div class="col-sm-6 visitor-right-pane">
                        <div class="row main-info"> 
-                           <div class="col-xs-2">
-                                <img src="/admin/assets/images/default-user.png" style="width: 39px;
-                                height: 40px;border-radius: 60%;" class="ng-isolate-scope">
+                           <div class="col-xs-2 image-outer">
+                                <img src="/admin/assets/images/default-user.png"  class="ng-isolate-scope logo">
                             </div>
                             <div class="col-xs-10">
                                 <p><strong>Name: </strong> {{activeVisitorDetail.name}}</p>
